[gd_scene load_steps=3 format=3 uid="uid://d0hohy40ewgkc"]

[ext_resource type="Script" path="res://Scenes/HUD/Buttons/UnitButtonContainer.gd" id="1_aiiex"]
[ext_resource type="Theme" uid="uid://bjaj3lhevqwr0" path="res://Resources/Theme/unit_button_container_theme.tres" id="1_rdk47"]

[node name="MarginContainer" type="MarginContainer"]
offset_right = 64.0
offset_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_rdk47")
script = ExtResource("1_aiiex")

[node name="UnitButtonContainer" type="AspectRatioContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
stretch_mode = 3
